[tool.poetry]
name = "value-vroom-api"
version = "0.0.1"
description = "The backend for the value-vroom car rental app"
authors = ["Mathias Gredal <magre21@student.sdu.dk>"]
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
loguru = "^0.7.2"
sqlalchemy = "^2.0.21"
prisma = "^0.10.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
ruff = "^0.0.292"
mypy = "^1.5.1"
pyngrok = "^7.0.0"
watchdog = "^3.0.0"

[tool.isort]
line_length = 110
multi_line_output = 3
known_first_party = ["app"]
include_trailing_comma = true
profile = "black"

[tool.black]
line-length = 110

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false


[tool.ruff]
ignore = [
    "G004",
    "D203",
    "D213",
    "INP001",
    "E501",
    "E402",
    "ANN101",
    "S104",
    "TCH002",
    "TCH",
    "PTH",
    "D104",
    "SIM115",
    "D205",
    "D212",
    "FBT002",
    "FBT001",
    "PLR2004",
    "I001",
    "DTZ003",
    "PGH003",
    "S101",
    "D400",
    "D404",
    "D415",
    "UP017",
    "TRY002", 
    "TRY003", 
    "EM101"
]
select = ["ALL"]
target-version = "py311"
line-length = 110

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



# cryptography = "41.0.1"
# flask = "2.2.3"
# flask-restful = "0.3.9"
# flask-restful-swagger-3 = "0.5.1"
# prisma = "^0.8.0"
# python = "^3.10"
# python-dotenv = "^1.0.0"
# requests = "^2.28"
# types-requests = "^2.28"
# rich = "^13.0"
# 
# [tool.poetry.dev-dependencies]
# coverage = "^7.2.0"
# pretend = "^1.0.0"
# pytest = "^7.2.0"
# pytest-cov = "^4.0.0"
# pytest-env = "^0.8.1"
# black = "^23.1.0"
# ruff = "0.0.254"
# isort = "^5.12.0"
# mypy = "^1.1.0"
# pdoc = "^13.0.0"
# 
# [tool.pytest.ini_options]
# log_cli = true
# log_cli_level = "DEBUG"
# log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
# log_cli_date_format = "%Y-%m-%d %H:%M:%S"
# 
# [tool.isort]
# line_length = 110
# multi_line_output = 3
# known_first_party = ["value_vroom_api"]
# include_trailing_comma = true
# 
# [tool.black]
# line-length = 110
# 
# [tool.mypy]
# allow_redefinition = true
# check_untyped_defs = true
# disallow_incomplete_defs = true
# disallow_untyped_defs = true
# ignore_missing_imports = true
# no_implicit_optional = true
# show_error_codes = true
# sqlite_cache = true
# strict_equality = true
# warn_no_return = true
# warn_redundant_casts = true
# warn_return_any = true
# warn_unreachable = true
# warn_unused_configs = true
# warn_unused_ignores = false
# 
# [tool.ruff]
# ignore = [
#     "G004",
#     "D203",
#     "D213",
#     "INP001",
#     "E501",
#     "E402",
#     "ANN101",
#     "S104",
#     "TCH002",
#     "TCH",
#     "PTH",
#     "D104",
#     "SIM115",
#     "D205",
#     "D212",
#     "FBT002",
#     "FBT001",
#     "PLR2004",
#     "I001",
#     "DTZ003",
#     "PGH003",
#     "S101",
#     "D400",
#     "D404",
#     "D415",
#     "UP017",
# ]
# select = ["ALL"]
# target-version = "py311"
# line-length = 110
# 
# [tool.ruff.per-file-ignores]
# "__init__.py" = ["F401"]