[tool.poetry]
name = "xpense-api"
version = "0.0.1"
description = "The backend for the xpense app"
authors = ["Mathias Gredal <magre21@student.sdu.dk>"]
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
loguru = "^0.7.2"
sqlalchemy = "^2.0.21"
prisma = "^0.11.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
ruff = "^0.0.292"
mypy = "^1.5.1"
pyngrok = "^7.0.0"
watchdog = "^3.0.0"

[tool.isort]
line_length = 110
multi_line_output = 3
known_first_party = ["app"]
include_trailing_comma = true
profile = "black"

[tool.black]
line-length = 110

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false


[tool.ruff]
ignore = [
    "G004",
    "D203",
    "D213",
    "INP001",
    "E501",
    "E402",
    "ANN101",
    "S104",
    "TCH002",
    "TCH",
    "PTH",
    "D104",
    "SIM115",
    "D205",
    "D212",
    "FBT002",
    "FBT001",
    "PLR2004",
    "I001",
    "DTZ003",
    "PGH003",
    "S101",
    "D400",
    "D404",
    "D415",
    "UP017",
    "TRY002", 
    "TRY003", 
    "EM101"
]
select = ["ALL"]
target-version = "py311"
line-length = 110

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


